--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -14,7 +14,7 @@ jobs:
       - uses: hhyasdf/image-sync-action@v1.1
         with:
           auth_file: ./auth.yaml
-          images_file: ./nginx-images.yaml
+          images_file: ./images.yaml
           version: latest
           proc: 20
         env:
