--- a/auth.yaml
+++ b/auth.yaml
@@ -1,3 +1,3 @@
 registry.cn-beijing.aliyuncs.com/io01:
-  "username": "${ACR_USER}",
-  "password": "${ACR_PASSWORD}"
+  username": $ACR_USER,
+  password": $ACR_PASSWORD
