--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -19,3 +19,4 @@ jobs:
           proc: 20
         env:
           ACR_PASSWORD: ${{ secrets.ACR_PASSWORD }}
+          ACR_USER: "${{ secrets.ACR_USER }}"
