--- a/images.yaml
+++ b/images.yaml
@@ -1,1 +1,1 @@
-nattertool/check: registry.cn-beijing.aliyuncs.com/io01/nattertool_check
+nattertool/check:latest: registry.cn-beijing.aliyuncs.com/io01/nattertool_check
