--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -2,8 +2,8 @@ name: CI
 
 on:
   workflow_dispatch:
-  # push:
-  #   branches: [ "main" ]
+  push:
+    branches: [ "main" ]
 
 jobs:
  sync-images:
