--- a/images.yaml
+++ b/images.yaml
@@ -3,3 +3,4 @@ phpmyadmin:5.2.1: registry.cn-hangzhou.aliyuncs.com/shilohl/phpmyadmin
 alpine:3.18.2: registry.cn-hangzhou.aliyuncs.com/shilohl/mysql-job-dbdata
 redis:6.2: registry.cn-hangzhou.aliyuncs.com/shilohl/redis
 spryker/redis-commander:0.8.0: registry.cn-hangzhou.aliyuncs.com/shilohl/redis-admin
+portainer/portainer-ce registry.cn-hangzhou.aliyuncs.com/shilohl/portainer
